get clients page
